--- a/Resource1.resx
+++ b/Resource1.resx
@@ -127,4 +127,7 @@
   <data name="_1564388747573" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\1564388747573.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="gpl" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\gpl.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;gb2312</value>
+  </data>
 </root>
